--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,14 @@ js/test.js
 js/functions.js
 js/variables copy.js
 js/variables.js
+sample bootstrap.html
+modalVanilla.html
+modaltest.html
+modalBbootstrap.html
+js/vanillamodal.js
+js/solution copy.js
+js/scriptPokeBootstrap.js
+js/modal.js
+js/copy.js
+modaltest.html
+js/modal.js
